--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </h1>
           <div class="content has-text-justified">
             <p>I am a Ph.D student at <a href=""> Korea Unversity</a>, where I work with <a href="https://sites.google.com/view/sungjoon-choi/home">Sungjoon Choi</a> on artificial inteligence and robotics.
-                During Ph.D, I have also spent time at <a href="https://www.navercloudcorp.com/lang/en/">NAVER Cloud (Korea)</a> and <a href="https://ingenuitylabs.queensu.ca/">Ingenuity Labs (Canada)</a>. </p>
+                During Ph.D, I have also spent time at <a href="https://www.navercloudcorp.com/lang/en/">NAVER AI Lab (Korea)</a> and <a href="https://ingenuitylabs.queensu.ca/">Ingenuity Labs (Canada)</a>. </p>
               <p>
                 I am particularly interested in the intersection of interactive agents and robotics, especially how foundation models can enhance the natural interaction between humans and robots.
                 My goal is to explore how foundation models can enhance the personality, motion, and contextual understanding of these characters, making their behavior more lifelike and responsive. 
