--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
                 <span class="icon"><i class="fas fa-globe-asia"></i></span>
                 <span>Project Page</span>
               </a>
-              <a class="external-link button is-small is-ghost" href="">
+              <a class="external-link button is-small is-ghost" href="https://arxiv.org/abs/2410.05628">
                 <span class="icon"><i class="fas fa-file-pdf"></i></span>
                 <span>PDF</span>
               </a>
-              <a class="external-link button is-small is-ghost" href="">
+              <a class="external-link button is-small is-ghost" href="https://arxiv.org/abs/2410.05628">
                 <span class="icon"><i class="ai ai-arxiv"></i></span>
                 <span>arXiv</span>
               </a>
