--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
               </span>
             </div>
             <div class="publication-venue">
-              <span>Robotics and Automation Letters, 2024</span>
+              <span>Robotics and Automation Letters, 2024 <br>
+              International Conference of Robotics and Automation (ICRA), 2025 </span>
               
             </div>
             <p class="publication-description">Employing a persona-driven interactive framework to animate an anthropomorphic robotic system, enhancing audience engagement through non-verbal interactions</p>
