--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <b>[May 2024]</b>: <a href="https://socratesrobotdog.github.io/">Our paper</a> about socially aware navigation has been accepted to <a href="https://www.ro-man2024.org/">RO-MAN 2024</a>. 
           </li>
           <li>
-            <b>[April 2024 - October 2024]</b>: I have started internship at <a href="https://www.navercloudcorp.com/lang/en/">NAVER Cloud, AI Lab</a>. 
+            <b>[April 2024 - October 2024]</b>: I have started internship at <a href="https://www.navercloudcorp.com/lang/en/">NAVER Cloud</a> AI Lab, advised by <a href="https://sangdooyun.github.io/">Sangdoo Yun</a>. 
           </li>
           <li>
             <b>[January 2024]</b>: <a href="https://joonhyung-lee.github.io/spots/">Our paper</a> about semi-autonomous teleoperation with physical simulators and large language models has been accepted to <a href="https://2024.ieee-icra.org/">ICRA 2024</a>! 
@@ -712,7 +712,11 @@
       <br>
       <h2 class="title is-5">Reviewing activities</h2>
         <ul>
-          <li>• I serve as a reviewer at ICRA, IROS, CHI, RA-L, NEURIPS Workshop. </li>
+          <li>• I serve as a reviewer at ICRA 2025. </li>
+          <li>• I serve as a reviewer at CHI 2025. </li>
+          <li>• I serve as a reviewer at RA-L 2024.</li>
+          <li>• I serve as a reviewer at NEURIPS Workshop (Video-Language Models) 2025. </li>
+          <li>• I serve as a reviewer at IROS 2024.</li>
         </ul>
     </div>
   </section>
