--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
       <div class="content">
         <ul>
           <li>
+            <b>[May 2025]</b>: <a href="https://mask-robot.github.io/">Our paper</a> about persona-driven human robot interaction was presented in ICRA 2025 The 2nd Workshop on Nonverbal Cues for Human-Robot Cooperative Intelligence as invited paper!</a>. 
+          </li>
+          <li>
+            <b>[Apri 2025]</b>: Our paper</a> about representation learning was presented in ICLR 2025 7th Robot Learning Workshop: Towards Robots with Human-Level Abilities.</a>. 
+          </li>
+      
+          <li>
             <b>[July 2024]</b>: <a href="https://mask-robot.github.io/">Our paper</a> about persona-driven human robot interaction <a href="https://www.ieee-ras.org/publications/ra-l">Robotics and Automation letters</a>! We are looking forward to presenting our work at <a href="https://2025.ieee-icra.org/">ICRA 2025</a>. 
           </li>
           <li>
@@ -110,6 +117,61 @@
       </div>
 
       <h2 class="title is-3">Publications</h2>
+
+       <div class="publication-block columns">
+
+        <div class="column is-2">
+          <div class="publication-image publication-mousecell">
+            
+            <video autoplay preload playsinline class="" height="100%" loop muted width="100%" style="display: none;">
+              <source src="./images/mae_before.png" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+            <img alt="Self-supervised Visual State Representation Learning for robotics from Dynamic Scenes" src="./images/mae_before.png" style="display: inline-block;"/>
+          </div>
+        </div>
+
+        <div class="column">
+          <div class="content">
+            <h3 class="publication-title"><a href="">Self-supervised Visual State Representation Learning for robotics from Dynamic Scenes </a></h3>
+            <div class="publication-authors">
+              <span class="author-block ">
+                <a href="https://scholar.google.co.kr/citations?user=u-9bdkwAAAAJ&hl=en"> Taekhyung Kim</a>,
+              </span>
+              <span class="author-block ">
+                <a href="https://sites.google.com/site/dyhan0920/"> Dongyoon Han</a>,
+              </span>
+              <span class="author-block ">
+                <a href="https://sites.google.com/view/byeongho-heo/home"> Byeongho Heo</a>,
+              </span>
+              <span class="author-block author-me">
+                Jeongeun Park,
+              </span>
+              <span class="author-block ">
+                <a href="https://sangdooyun.github.io/"> Sangdoo Yun</a>
+              </span>
+            </div>
+            <div class="publication-venue">
+              <span style="color: rgb(156, 15, 156)"> (Under Review) </span> <br>
+              <span> ICLR 2025 7th Robot Learning Workshop: Towards Robots with Human-Level Abilities </span>
+            </div>
+            <p class="publication-description">SRL uses extreme masked autoencoding to learn compact, temporally aware visual state embeddings that boost robotic manipulation and locomotion performance in both simulation and real-world. </p>
+            <!-- Publication Links. -->
+            <div class="publication-links buttons field has-addons">
+              <!-- <a class="external-link button is-small is-ghost" href="https://github.com/jeongeun980906/Uncertainty-Aware-Robust-Learning">
+                <span class="icon"><i class="fas fa-globe-asia"></i></span>
+                <span>Code</span>
+              </a> -->
+              <a class="external-link button is-small is-ghost" href="https://openreview.net/forum?id=bEM2WGagcJ">
+                <span class="icon"><i class="fas fa-file-pdf"></i></span>
+                <span>PDF</span>
+              </a>
+            </div>
+            <!--/ Publication Links. -->
+          </div>
+        </div>
+      </div>
+
       <div class="publication-block columns">
 
         <div class="column is-2">
@@ -118,17 +180,17 @@
               <source src="./images/vim_after.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
-            <img alt="Versatile Motion-Language Models for Multi-Turn Interactive Agents" src="./images/vim_before.png" style="display: inline-block;"/>
+            <img alt="A Unified Framework for Motion Reasoning and Generation in Human Interaction" src="./images/vim_before.png" style="display: inline-block;"/>
           </div>
         </div>
 
         <div class="column">
           <div class="content">
-            <h3 class="publication-title"><a href="https://vim-motion-language.github.io/"> VIM: Versatile Motion-Language Models for Multi-Turn Interactive Agents </a></h3>
+            <h3 class="publication-title"><a href="https://vim-motion-language.github.io/"> A Unified Framework for Motion Reasoning and Generation in Human Interaction </a></h3>
             <div class="publication-authors">
               <span class="author-block ">
               <span class="author-block author-me">
-                Jeongeun  Park,
+                Jeongeun Park,
               </span>
               <span class="author-block ">
                 <a href="https://sites.google.com/view/sungjoon-choi/home"> Sungjoon Choi</a>,
@@ -137,9 +199,10 @@
                 <a href="https://sangdooyun.github.io/"> Sangdoo Yun</a>
               </span>
             </div>
-            <!-- <div class="publication-venue">
-              <span>Robotics and Automation Letters, 2024</span>
-            </div> -->
+            <div class="publication-venue">
+              <!-- <span>Robotics and Automation Letters, 2024</span> -->
+               <span style="color: rgb(156, 15, 156)"> (Under Review) </span>
+            </div>
             <p class="publication-description">
               VIM (Versatile Interactive Motion language model) integrates language and motion modalities to understand, generate, and control interactive motions in multi-turn conversations, addressing the scarcity of multi-turn interactive motion data with a synthetic dataset, INTER-MT<sup>2</sup>.
             </p>
@@ -181,7 +244,7 @@
             <div class="publication-authors">
               <span class="author-block ">
               <span class="author-block author-me">
-                Jeongeun  Park,
+                Jeongeun Park,
               </span>
               <span class="author-block ">
                 <a href="">Taemoon Jeong</a>,
@@ -260,7 +323,7 @@
               <span class="author-block ">
                 <a href="https://github.com/park-sangbeom"> Sangbeom Park</a>,
               <span class="author-block author-me">
-                Jeongeun  Park,
+                Jeongeun Park,
               </span>
               <span class="author-block ">
                 <a href="https://sites.google.com/view/railab"> Kyungjae Lee</a>,
@@ -312,7 +375,7 @@
             <h3 class="publication-title"><a href="https://clararobot.github.io/">CLARA: Classifying and Disambiguating User Commands for Reliable Interactive Robotic Agents </a></h3>
             <div class="publication-authors">
               <span class="author-block author-me">
-                Jeongeun  Park,
+                Jeongeun Park,
               </span>
               <span class="author-block ">
                 <a href="https://github.com/pull-ups"> Seungwon Lim</a>,
@@ -376,7 +439,7 @@
             <h3 class="publication-title"><a href="https://socratesrobotdog.github.io/"> Text-based Human Search and Approach using a Robot Dog </a></h3>
             <div class="publication-authors">
               <span class="author-block author-me">
-                Jeongeun  Park,
+                Jeongeun Park,
               </span>
               <span class="author-block ">
                 <a href="https://www.linkedin.com/in/silveira-jefferson/e"> Jefferson Silveira</a>,
@@ -431,7 +494,7 @@
             <h3 class="publication-title"><a href="https://jeongeun980906.github.io/Zeroshot-Active-VIsual-Search">Zero-shot Active Visual Search (ZAVIS): Intelligent Object Search for Robotic Assistants </a></h3>
             <div class="publication-authors">
               <span class="author-block author-me">
-                Jeongeun  Park,
+                Jeongeun Park,
               </span>
               <span class="author-block ">
                 <a href="https://www.linkedin.com/in/taerim-yoon-631a9321a/"> Taerim Yoon</a>,
@@ -492,7 +555,7 @@
             <h3 class="publication-title"><a href="https://github.com/jeongeun980906/Uncertainty-Aware-Robust-Learning">Elucidating Robust Learning with Uncertainty-Aware Corruption Pattern Estimation </a></h3>
             <div class="publication-authors">
               <span class="author-block author-me">
-                Jeongeun  Park,
+                Jeongeun Park,
               </span>
               <span class="author-block ">
                 <a href="https://seungyounshin.github.io/"> Seungyoon Shin</a>,
@@ -625,7 +688,7 @@
                 <a href="https://taery-kim.notion.site/J-Taery-Kim-8e02afdc5cdc46ab8dd281a06033a27e"> J. Taery Kim</a>,
               </span>
               <span class="author-block author-me">
-                Jeongeun  Park,
+                Jeongeun Park,
               </span>
               <span class="author-block ">
                 <a href="https://sites.google.com/view/sungjoon-choi/home"> Sungjoon Choi</a>,
@@ -681,7 +744,7 @@
                 <a href=""> Sunghyun Park</a>,
               </span>
               <span class="author-block author-me">
-                Jeongeun  Park,
+                Jeongeun Park,
               </span>
               <span class="author-block ">
                 <a href=""> Kyungjae Lee</a>,
@@ -712,11 +775,8 @@
       <br>
       <h2 class="title is-5">Reviewing activities</h2>
         <ul>
-          <li>• I serve as a reviewer at ICRA 2025. </li>
-          <li>• I serve as a reviewer at CHI 2025. </li>
-          <li>• I serve as a reviewer at RA-L 2024.</li>
-          <li>• I serve as a reviewer at NEURIPS Workshop (Video-Language Models) 2025. </li>
-          <li>• I serve as a reviewer at IROS 2024.</li>
+          <li>• I serve as a reviewer at ICRA, CHI, NeurIPS Workshop (Video-Language Models), CVPR, IROS 2025. </li>
+          <li>• I serve as a reviewer at RA-L, IROS 2024.</li>
         </ul>
     </div>
   </section>
