--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@
             </div>
             <div class="publication-venue">
               <span>Robotics and Automation Letters, 2024 <br>
-              International Conference of Robotics and Automation (ICRA), 2025 </span>
+              International Conference of Robotics and Automation (ICRA), 2025 <br> 
+              ICRA 2025 The 2nd Workshop on Nonverbal Cues for Human-Robot Cooperative Intelligenc</span>
               
             </div>
             <p class="publication-description">Employing a persona-driven interactive framework to animate an anthropomorphic robotic system, enhancing audience engagement through non-verbal interactions</p>
