--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <p>I am a Ph.D student at <a href=""> Korea Unversity</a>, where I work with <a href="https://sites.google.com/view/sungjoon-choi/home">Sungjoon Choi</a> on artificial inteligence and robotics.
                 During Ph.D, I have also spent time at <a href="https://www.navercloudcorp.com/lang/en/">NAVER AI Lab (Korea)</a> and <a href="https://ingenuitylabs.queensu.ca/">Ingenuity Labs (Canada)</a>. </p>
               <p>
-                I am particularly interested in the intersection of interactive agents and robotics, especially how foundation models can enhance the natural interaction between humans and robots.
-                My goal is to explore how foundation models can enhance the personality, motion, and contextual understanding of these characters, making their behavior more lifelike and responsive. 
+                I’m passionate about how robots can assist people in everyday life by collaborating and interacting naturally. 
+                In particular, I aim to investigate how foundation models can enable robots to understand, anticipate, and respond to human needs, making day-to-day tasks smoother and more intuitive.
                 <!-- I'm excited to work on creating robots that not only perform tasks but also interact in meaningful, socially engaging ways, embodying traits and behaviors that make them relatable and adaptive to different contexts and user needs. -->
               </p>
             <div class="buttons">
@@ -80,9 +80,11 @@
             <b>[May 2025]</b>: <a href="https://mask-robot.github.io/">Our paper</a> about persona-driven human robot interaction was presented in ICRA 2025 The 2nd Workshop on Nonverbal Cues for Human-Robot Cooperative Intelligence as invited paper!</a>. 
           </li>
           <li>
-            <b>[Apri 2025]</b>: Our paper</a> about representation learning was presented in ICLR 2025 7th Robot Learning Workshop: Towards Robots with Human-Level Abilities.</a>. 
+            <b>[April 2025]</b>: Our paper</a> about representation learning was presented in ICLR 2025 7th Robot Learning Workshop: Towards Robots with Human-Level Abilities</a>. 
           </li>
-      
+          <li>
+            <b>[Feburary 2025]</b>: I am presenting <a href="https://mask-robot.github.io">our work</a> about human-robot interaction in Korea Robotics Society Annual Conference (KRoC) as invited speaker in flagship conference session</a>. 
+          </li>
           <li>
             <b>[July 2024]</b>: <a href="https://mask-robot.github.io/">Our paper</a> about persona-driven human robot interaction <a href="https://www.ieee-ras.org/publications/ra-l">Robotics and Automation letters</a>! We are looking forward to presenting our work at <a href="https://2025.ieee-icra.org/">ICRA 2025</a>. 
           </li>
@@ -91,6 +93,9 @@
           </li>
           <li>
             <b>[April 2024 - October 2024]</b>: I have started internship at <a href="https://www.navercloudcorp.com/lang/en/">NAVER Cloud</a> AI Lab, advised by <a href="https://sangdooyun.github.io/">Sangdoo Yun</a>. 
+          </li>
+          <li>
+            <b>[Feburary 2024]</b>: I am presenting <a href="https://clararobot.github.io">our work</a> about uncertainty estimation in Korea Robotics Society Annual Conference (KRoC) as invited speaker in flagship conference session</a>. 
           </li>
           <li>
             <b>[January 2024]</b>: <a href="https://joonhyung-lee.github.io/spots/">Our paper</a> about semi-autonomous teleoperation with physical simulators and large language models has been accepted to <a href="https://2024.ieee-icra.org/">ICRA 2024</a>! 
