--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="content">
         <ul>
           <li>
-            <b>[May 2025]</b>: <a href="https://mask-robot.github.io/">Our paper</a> about persona-driven human robot interaction was presented in ICRA 2025 The 2nd Workshop on Nonverbal Cues for Human-Robot Cooperative Intelligence as invited paper!</a>. 
+            <b>[May 2025]</b>: <a href="https://molam-motion-language.github.io/">Our paper</a> about interactive motion-language model got accepted to <a href="https://iccv.thecvf.com/">ICCV 2025.</a>. 
           </li>
           <li>
             <b>[April 2025]</b>: Our paper</a> about representation learning was presented in ICLR 2025 7th Robot Learning Workshop: Towards Robots with Human-Level Abilities</a>. 
@@ -138,7 +138,7 @@
 
         <div class="column">
           <div class="content">
-            <h3 class="publication-title"><a href="">Self-supervised Visual State Representation Learning for robotics from Dynamic Scenes </a></h3>
+            <h3 class="publication-title"><a href="">Token Bottleneck: One Token to Remember Dynamics</a></h3>
             <div class="publication-authors">
               <span class="author-block ">
                 <a href="https://scholar.google.co.kr/citations?user=u-9bdkwAAAAJ&hl=en"> Taekhyung Kim</a>,
@@ -160,16 +160,16 @@
               <span style="color: rgb(156, 15, 156)"> (Under Review) </span> <br>
               <span> ICLR 2025 7th Robot Learning Workshop: Towards Robots with Human-Level Abilities </span>
             </div>
-            <p class="publication-description">SRL uses extreme masked autoencoding to learn compact, temporally aware visual state embeddings that boost robotic manipulation and locomotion performance in both simulation and real-world. </p>
+            <p class="publication-description">ToBo uses extreme masked autoencoding to learn compact, temporally aware visual state embeddings that boost robotic manipulation and locomotion performance in both simulation and real-world. </p>
             <!-- Publication Links. -->
             <div class="publication-links buttons field has-addons">
-              <!-- <a class="external-link button is-small is-ghost" href="https://github.com/jeongeun980906/Uncertainty-Aware-Robust-Learning">
+              <a class="external-link button is-small is-ghost" href="https://token-bottleneck.github.io/">
                 <span class="icon"><i class="fas fa-globe-asia"></i></span>
-                <span>Code</span>
-              </a> -->
-              <a class="external-link button is-small is-ghost" href="https://openreview.net/forum?id=bEM2WGagcJ">
-                <span class="icon"><i class="fas fa-file-pdf"></i></span>
-                <span>PDF</span>
+                <span>Project Page</span>
+              </a>
+              <a class="external-link button is-small is-ghost" href="https://arxiv.org/abs/2507.06543">
+                <span class="icon"><i class="ai ai-arxiv"></i></span>
+                <span>arXiv</span>
               </a>
             </div>
             <!--/ Publication Links. -->
@@ -191,7 +191,7 @@
 
         <div class="column">
           <div class="content">
-            <h3 class="publication-title"><a href="https://vim-motion-language.github.io/"> A Unified Framework for Motion Reasoning and Generation in Human Interaction </a></h3>
+            <h3 class="publication-title"><a href="https://molam-motion-language.github.io/"> A Unified Framework for Motion Reasoning and Generation in Human Interaction </a></h3>
             <div class="publication-authors">
               <span class="author-block ">
               <span class="author-block author-me">
@@ -205,15 +205,15 @@
               </span>
             </div>
             <div class="publication-venue">
-              <!-- <span>Robotics and Automation Letters, 2024</span> -->
-               <span style="color: rgb(156, 15, 156)"> (Under Review) </span>
+              <span>International Conference on Computer Vision (ICCV), 2025</span>
+               <!-- <span style="color: rgb(156, 15, 156)"> (Under Review) </span> -->
             </div>
             <p class="publication-description">
-              VIM (Versatile Interactive Motion language model) integrates language and motion modalities to understand, generate, and control interactive motions in multi-turn conversations, addressing the scarcity of multi-turn interactive motion data with a synthetic dataset, INTER-MT<sup>2</sup>.
+              MoLaM (Interactive Motion language model) integrates language and motion modalities to understand, generate, and control interactive motions in multi-turn conversations, addressing the scarcity of multi-turn interactive motion data with a synthetic dataset, INTER-MT<sup>2</sup>.
             </p>
             <!-- Publication Links. -->
             <div class="publication-links buttons field has-addons">
-              <a class="external-link button is-small is-ghost" href="https://vim-motion-language.github.io/">
+              <a class="external-link button is-small is-ghost" href="https://molam-motion-language.github.io/">
                 <span class="icon"><i class="fas fa-globe-asia"></i></span>
                 <span>Project Page</span>
               </a>
