--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <b>[Feburary 2025]</b>: I am presenting <a href="https://mask-robot.github.io">our work</a> about human-robot interaction in Korea Robotics Society Annual Conference (KRoC) as invited speaker in flagship conference session</a>. 
           </li>
           <li>
-            <b>[July 2024]</b>: <a href="https://mask-robot.github.io/">Our paper</a> about persona-driven human robot interaction <a href="https://www.ieee-ras.org/publications/ra-l">Robotics and Automation letters</a>! We are looking forward to presenting our work at <a href="https://2025.ieee-icra.org/">ICRA 2025</a>. 
+            <b>[July 2024]</b>: <a href="https://mask-robot.github.io/">Our paper</a> about persona-driven human robot interaction has been accepted to <a href="https://www.ieee-ras.org/publications/ra-l">Robotics and Automation letters</a>! We are looking forward to presenting our work at <a href="https://2025.ieee-icra.org/">ICRA 2025</a>. 
           </li>
           <li>
             <b>[May 2024]</b>: <a href="https://socratesrobotdog.github.io/">Our paper</a> about socially aware navigation has been accepted to <a href="https://www.ro-man2024.org/">RO-MAN 2024</a>. 
