--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
       <div class="content">
         <ul>
           <li>
-            <b>[May 2025]</b>: <a href="https://molam-motion-language.github.io/">Our paper</a> about interactive motion-language model got accepted to <a href="https://iccv.thecvf.com/">ICCV 2025.</a>. 
+            <b>[Sep 2025]</b>: <a href="https://token-bottleneck.github.io/">Our paper</a> about visual representation learning got accepted to <a href="https://neurips.cc/">NeurIPS 2025.</a>. 
           </li>
           <li>
-            <b>[April 2025]</b>: Our paper</a> about representation learning was presented in ICLR 2025 7th Robot Learning Workshop: Towards Robots with Human-Level Abilities</a>. 
+            <b>[May 2025]</b>: <a href="https://molam-motion-language.github.io/">Our paper</a> about interactive motion-language model got accepted to <a href="https://iccv.thecvf.com/">ICCV 2025.</a>. 
           </li>
           <li>
             <b>[Feburary 2025]</b>: I am presenting <a href="https://mask-robot.github.io">our work</a> about human-robot interaction in Korea Robotics Society Annual Conference (KRoC) as invited speaker in flagship conference session</a>. 
@@ -138,7 +138,7 @@
 
         <div class="column">
           <div class="content">
-            <h3 class="publication-title"><a href="">Token Bottleneck: One Token to Remember Dynamics</a></h3>
+            <h3 class="publication-title"><a href="https://token-bottleneck.github.io/">Token Bottleneck: One Token to Remember Dynamics</a></h3>
             <div class="publication-authors">
               <span class="author-block ">
                 <a href="https://scholar.google.co.kr/citations?user=u-9bdkwAAAAJ&hl=en"> Taekhyung Kim</a>,
@@ -157,7 +157,7 @@
               </span>
             </div>
             <div class="publication-venue">
-              <span style="color: rgb(156, 15, 156)"> (Under Review) </span> <br>
+              <span> The Thirty-Ninth Annual Conference on Neural Information Processing Systems (NeurIPS), 2025 </span> <br>
               <span> ICLR 2025 7th Robot Learning Workshop: Towards Robots with Human-Level Abilities </span>
             </div>
             <p class="publication-description">ToBo uses extreme masked autoencoding to learn compact, temporally aware visual state embeddings that boost robotic manipulation and locomotion performance in both simulation and real-world. </p>
