--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
       <div class="content">
         <ul>
           <li>
-            <b>[Sep 2025]</b>: <a href="https://token-bottleneck.github.io/">Our paper</a> about visual representation learning got accepted to <a href="https://neurips.cc/">NeurIPS 2025.</a>. 
+            <b>[Sep 2025]</b>: <a href="https://token-bottleneck.github.io/">Our paper</a> about visual representation learning got accepted to <a href="https://neurips.cc/">NeurIPS 2025</a>. 
           </li>
           <li>
-            <b>[May 2025]</b>: <a href="https://molam-motion-language.github.io/">Our paper</a> about interactive motion-language model got accepted to <a href="https://iccv.thecvf.com/">ICCV 2025.</a>. 
+            <b>[May 2025]</b>: <a href="https://molam-motion-language.github.io/">Our paper</a> about interactive motion-language model got accepted to <a href="https://iccv.thecvf.com/">ICCV 2025</a>. 
           </li>
           <li>
             <b>[Feburary 2025]</b>: I am presenting <a href="https://mask-robot.github.io">our work</a> about human-robot interaction in Korea Robotics Society Annual Conference (KRoC) as invited speaker in flagship conference session</a>. 
