--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
               </span>
             </div>
             <div class="publication-venue">
-              <span>Robotics and Automation Letters, 2024 <br>
+              <span>IEEE Robotics and Automation Letters (RA-L), 2024 <br>
               International Conference of Robotics and Automation (ICRA), 2025 <br> 
               ICRA 2025 The 2nd Workshop on Nonverbal Cues for Human-Robot Cooperative Intelligence</span>
               
@@ -403,7 +403,7 @@
               </span>
             </div>
             <div class="publication-venue">
-              <span>Robotics and Automation Letters (RA-L), 2024, <br> International Conference of Robotics and Automation (ICRA), 2024</span>
+              <span>IEEE Robotics and Automation Letters (RA-L), 2024, <br> International Conference of Robotics and Automation (ICRA), 2024</span>
               
             </div>
             <p class="publication-description">Introducing a method for interactive robotic agents using large language models (LLMs) to classify user commands as clear, ambiguous, or infeasible, enhancing reliability by leveraging uncertainty estimation, situational awareness, and user interaction for disambiguation.</p>
