--- a/index.html
+++ b/index.html
@@ -120,8 +120,71 @@
           </li>
         </ul>
       </div>
-
       <h2 class="title is-3">Publications</h2>
+
+       <div class="publication-block columns">
+
+        <div class="column is-2">
+          <div class="publication-image publication-mousecell">
+            
+            <video autoplay preload playsinline class="" height="100%" loop muted width="100%" style="display: none;">
+              <source src="./images/vine_before.png" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+            <img alt="Learning Feasibility from Failure Data in Vision–Language–Action Models" src="./images/vine_before.png" style="display: inline-block;"/>
+          </div>
+        </div>
+        <div class="column">
+          <div class="content">
+            <h3 class="publication-title"><a href="">Learning Feasibility from Failure Data in Vision–Language–Action Models</a></h3>
+            <div class="publication-authors">
+              <span class="author-block author-me">
+                Jeongeun Park,
+              </span>
+              <span class="author-block ">
+                <a href=""> Jihwan Yoon</a>,
+              </span>
+              <span class="author-block ">
+                <a href=""> Byeongwoo Jeon</a>,
+              </span>
+              <span class="author-block ">
+                <a href=""> Juhan Park</a>,
+              </span>
+              <span class="author-block ">
+                <a href="">Namhoon Cho</a>,
+              </span>
+              <span class="author-block ">
+                <a href=""> Kyungjae Lee</a>,
+              </span>
+              <span class="author-block ">
+                <a href="https://sangdooyun.github.io/"> Sangdoo Yun</a>,
+              </span>
+              <span class="author-block ">
+                <a href="https://sites.google.com/view/sungjoon-choi/home"> Sungjoon Choi</a>
+            </div>
+            <div class="publication-venue">
+              <span> CoRL 2025 2nd Workshop on Safe and Robust Robot Learning for Operation in the Real World </span>
+            </div>
+            <p class="publication-description">We propose VINE, a dual-system framework that injects failure-aware reasoning into
+VLAs. System 1 executes grounded action chunks, while System 2 builds a tree of thought
+states and scores candidate subgoals using both success and failure data.</p>
+            <!-- In red color -->
+            <p style="color: red;">The arXiv preprint and project page will be available soon (before November).</p>
+            <!-- Publication Links. -->
+            <div class="publication-links buttons field has-addons">
+              <a class="external-link button is-small is-ghost" href="">
+                <span class="icon"><i class="fas fa-globe-asia"></i></span>
+                <span>Project Page</span>
+              </a>
+              <a class="external-link button is-small is-ghost" href="">
+                <span class="icon"><i class="ai ai-arxiv"></i></span>
+                <span>arXiv</span>
+              </a>
+            </div>
+            <!--/ Publication Links. -->
+          </div>
+        </div>
+      </div>
 
        <div class="publication-block columns">
 
