--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
       <div class="content">
         <ul>
           <li>
+            <b>[Dec 2025]</b>: I have successfully defended my PhD dissertation, “Towards Multimodal Foundation Models for Human-Centered Robot Behavior” at Korea University</a>. 
+          </li>
+          <li>
             <b>[Sep 2025]</b>: <a href="https://token-bottleneck.github.io/">Our paper</a> about visual representation learning got accepted to <a href="https://neurips.cc/">NeurIPS 2025</a>. 
           </li>
           <li>
@@ -128,33 +131,35 @@
           <div class="publication-image publication-mousecell">
             
             <video autoplay preload playsinline class="" height="100%" loop muted width="100%" style="display: none;">
-              <source src="./images/vine_before.png" type="video/mp4">
+              <source src="./images/vine_after.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
-            <img alt="Learning Feasibility from Failure Data in Vision–Language–Action Models" src="./images/vine_before.png" style="display: inline-block;"/>
+            <img alt="Hierarchical Vision Language Action Model Using Success and Failure Demonstrations" src="./images/vine_before.png" style="display: inline-block;"/>
           </div>
         </div>
         <div class="column">
           <div class="content">
-            <h3 class="publication-title"><a href="">Learning Feasibility from Failure Data in Vision–Language–Action Models</a></h3>
+            <h3 class="publication-title"><a href="">Hierarchical Vision Language Action Model Using Success and Failure Demonstrations</a></h3>
             <div class="publication-authors">
               <span class="author-block author-me">
                 Jeongeun Park,
               </span>
               <span class="author-block ">
-                <a href=""> Jihwan Yoon</a>,
+                <a href="https://jihwan-yoon-page.github.io/"> Jihwan Yoon</a>,
               </span>
               <span class="author-block ">
-                <a href=""> Byeongwoo Jeon</a>,
+                <a href="https://rootyjeon.github.io/"> Byeongwoo Jeon</a>,
               </span>
               <span class="author-block ">
-                <a href=""> Juhan Park</a>,
+                <a href="https://juhan-park-page.github.io/"> Juhan Park</a>,
               </span>
               <span class="author-block ">
-                <a href="">Namhoon Cho</a>,
+                <a href="https://alinlab.kaist.ac.kr/shin.html"> Jinwoo Shin</a>,
+              <span class="author-block ">
+                <a href="https://aail.snu.ac.kr/">Namhoon Cho</a>,
               </span>
               <span class="author-block ">
-                <a href=""> Kyungjae Lee</a>,
+                <a href="https://sites.google.com/view/kyungjaelee"> Kyungjae Lee</a>,
               </span>
               <span class="author-block ">
                 <a href="https://sangdooyun.github.io/"> Sangdoo Yun</a>,
@@ -168,15 +173,13 @@
             <p class="publication-description">We propose VINE, a dual-system framework that injects failure-aware reasoning into
 VLAs. System 1 executes grounded action chunks, while System 2 builds a tree of thought
 states and scores candidate subgoals using both success and failure data.</p>
-            <!-- In red color -->
-            <p style="color: red;">The arXiv preprint and project page will be available soon (before November).</p>
             <!-- Publication Links. -->
             <div class="publication-links buttons field has-addons">
-              <a class="external-link button is-small is-ghost" href="">
+              <a class="external-link button is-small is-ghost" href="https://vine-vla.github.io/">
                 <span class="icon"><i class="fas fa-globe-asia"></i></span>
                 <span>Project Page</span>
               </a>
-              <a class="external-link button is-small is-ghost" href="">
+              <a class="external-link button is-small is-ghost" href="https://arxiv.org/abs/2512.03913">
                 <span class="icon"><i class="ai ai-arxiv"></i></span>
                 <span>arXiv</span>
               </a>
@@ -844,7 +847,8 @@ states and scores candidate subgoals using both success and failure data.</p>
       <br>
       <h2 class="title is-5">Reviewing activities</h2>
         <ul>
-          <li>• I serve as a reviewer at ICRA, CHI, NeurIPS Workshop (Video-Language Models), CVPR, IROS 2025. </li>
+          <li>• I serve as a reviewer at ICRA, RA-L 2026. </li>
+          <li>• I serve as a reviewer at ICRA, CHI, NeurIPS Workshop (Video-Language Models), CVPR, IROS, HRI 2025. </li>
           <li>• I serve as a reviewer at RA-L, IROS 2024.</li>
         </ul>
     </div>
